improved ux including fixing absolute positioning, z-indexes and pointer-events

--- a/src/app/components/Header/Header.css
+++ b/src/app/components/Header/Header.css
@@ -40,6 +40,7 @@
   border: none;
   text-decoration: none;
   border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0,0,0, 0.3);
 }
 
 @media (max-width: 768px) {
